# from-syscalls-to-async-await

./: Cargo.toml  README.md
delay-server/: Cargo.toml
delay-server/src/: main.rs
manual-futures/: Cargo.toml
manual-futures/src/: connect.rs  connect_mio.rs  epoll_executor.rs  executor_naive.rs  main.rs  receive.rs  receive_mio.rs  send.rs  send_mio.rs  talk.rs  waker.rs  waker_connect.rs  waker_executor.rs  waker_reactor.rs  waker_receive.rs  waker_send.rs
raw-syscall/: Cargo.toml
raw-syscall/src/: macros.rs  main.rs  non_blocking_epoll.rs  non_blocking_mio.rs  non_blocking_poll.rs  non_blocking_select.rs  non_blocking_std.rs  sequential.rs  sequential_std.rs
raw-syscall/src/sys_libc/: connect.rs  epoll.rs  epoll_event.rs  epoll_fd.rs  fd_set.rs  getsockopt.rs  libc.rs  mod.rs  net_utils.rs  poll.rs  poll_fd.rs  recv.rs  select.rs  send.rs  socket.rs  socket_fd.rs
